# geometrize-gpu

./: CMakeLists.txt  README.md
geometrize/: geometrize.pri
geometrize/geometrize/: model.cpp
geometrize/geometrize/gpu/: GpuEvaluator.cpp  GpuEvaluator.h  README.md
shaders/: error_reduce.comp  evaluate_shapes.comp
